--- a/src/SampleImageEditor/SampleImageEditor/MainPage.xaml
+++ b/src/SampleImageEditor/SampleImageEditor/MainPage.xaml
@@ -27,8 +27,7 @@
 
             <Image x:Name="MyImage" Grid.Row="0" Grid.ColumnSpan="2" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"/>
 
-            <Button Grid.Row="1" Grid.Column="0" Text="Get Edited Image" Clicked="GetEditedImage_Clicked" TextColor="White" BackgroundColor="Green" WidthRequest="200" HeightRequest="40" VerticalOptions="End" Margin="5, 0"/>
-            <Button Grid.Row="1" Grid.Column="1" Text="Save Edited Image" Clicked="SaveImage_Clicked" TextColor="White" BackgroundColor="Green" WidthRequest="200" HeightRequest="40" VerticalOptions="End" Margin="5, 0"/>
+            <Button Grid.Row="1" Grid.ColumnSpan="2" Text="Get Edited Image" Clicked="GetEditedImage_Clicked" TextColor="White" BackgroundColor="Green" WidthRequest="200" HeightRequest="40" VerticalOptions="End" Margin="5, 0"/>
             <Button Grid.Row="2" Grid.Column="0" Text="Edit Config" Clicked="SetConfig_Clicked" TextColor="White" BackgroundColor="Green" WidthRequest="200" HeightRequest="40" VerticalOptions="End" Margin="5, 10"/>
             <Button Grid.Row="2" Grid.Column="1" Text="Clean" Clicked="Clean_Clicked"  TextColor="White" BackgroundColor="Green" WidthRequest="200" HeightRequest="40" VerticalOptions="End" Margin="5, 10"/>
 
@@ -38,6 +37,7 @@
             <Grid VerticalOptions="FillAndExpand" BackgroundColor="White" HorizontalOptions="FillAndExpand" Margin="0" RowSpacing="0" Padding="15">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
+                    <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
@@ -72,30 +72,35 @@
                 </StackLayout>
 
                 <StackLayout Grid.Row="4" Orientation="Horizontal" Margin="0,5">
+                    <Label Text="Can Save Image" FontSize="Medium"/>
+                    <Switch IsToggled="{Binding Config.CanSaveImage}" />
+                </StackLayout>
+                
+                <StackLayout Grid.Row="5" Orientation="Horizontal" Margin="0,5">
                     <Label Text="Use sample image to edit" FontSize="Medium"/>
                     <Switch IsToggled="{Binding UseSampleImage}" />
                 </StackLayout>
                     
-                <Picker Grid.Row="5" ItemsSource="{Binding Aspects}" Title="Aspect" SelectedItem="{Binding Config.Aspect}"/>
-                <Picker Grid.Row="6" ItemsSource="{Binding BackgroundTypes}" Title="Background Type" SelectedItem="{Binding Config.BackgroundType}"/>
-                <Picker Grid.Row="7" ItemsSource="{Binding Colors}" Title="Background Color" SelectedItem="{Binding Config.BackgroundColor}"/>
+                <Picker Grid.Row="6" ItemsSource="{Binding Aspects}" Title="Aspect" SelectedItem="{Binding Config.Aspect}"/>
+                <Picker Grid.Row="7" ItemsSource="{Binding BackgroundTypes}" Title="Background Type" SelectedItem="{Binding Config.BackgroundType}"/>
+                <Picker Grid.Row="8" ItemsSource="{Binding Colors}" Title="Background Color" SelectedItem="{Binding Config.BackgroundColor}"/>
 
-                <StackLayout Grid.Row="8" Orientation="Horizontal" HorizontalOptions="FillAndExpand">
+                <StackLayout Grid.Row="9" Orientation="Horizontal" HorizontalOptions="FillAndExpand">
                     <Label Text="Crop Aspect Ratio" FontSize="Medium" VerticalTextAlignment="Center" VerticalOptions="Center"/>
                     <Entry Text="{Binding Config.CropAspectRatio}" Keyboard="Numeric" HorizontalOptions="FillAndExpand" VerticalTextAlignment="Center" VerticalOptions="Center"/>
                 </StackLayout>
 
-                <StackLayout Grid.Row="9" Orientation="Horizontal" HorizontalOptions="FillAndExpand">
+                <StackLayout Grid.Row="10" Orientation="Horizontal" HorizontalOptions="FillAndExpand">
                     <Label Text="Out Image Height" FontSize="Medium" VerticalTextAlignment="Center" VerticalOptions="Center"/>
                     <Entry Text="{Binding OutImageHeight}" Keyboard="Numeric" HorizontalOptions="FillAndExpand" VerticalTextAlignment="Center" VerticalOptions="Center"/>
                 </StackLayout>
 
-                <StackLayout Grid.Row="10" Orientation="Horizontal" HorizontalOptions="FillAndExpand">
+                <StackLayout Grid.Row="11" Orientation="Horizontal" HorizontalOptions="FillAndExpand">
                     <Label Text="Out Image Widht" FontSize="Medium" VerticalTextAlignment="Center" VerticalOptions="Center"/>
                     <Entry Text="{Binding OutImageWidht}" Keyboard="Numeric" HorizontalOptions="FillAndExpand" VerticalTextAlignment="Center" VerticalOptions="Center"/>
                 </StackLayout>
 
-                <Button Grid.Row="11" Text="Save Config" Clicked="SetConfig_Clicked" TextColor="White" BackgroundColor="Green" WidthRequest="200" HeightRequest="40" VerticalOptions="End" HorizontalOptions="Center" Margin="0, 10"/>
+                <Button Grid.Row="12" Text="Save Config" Clicked="SetConfig_Clicked" TextColor="White" BackgroundColor="Green" WidthRequest="200" HeightRequest="40" VerticalOptions="End" HorizontalOptions="Center" Margin="0, 10"/>
             </Grid>
         </ScrollView>
 
