--- a/src/SampleImageEditor/SampleImageEditor/MainPage.xaml
+++ b/src/SampleImageEditor/SampleImageEditor/MainPage.xaml
@@ -4,7 +4,9 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="SampleImageEditor.MainPage">
+             x:Class="SampleImageEditor.MainPage"
+             xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"            
+             ios:Page.UseSafeArea="True">
 
     <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Padding="0" Margin="0" RowSpacing="0">
         <Grid.RowDefinitions>
